# lazypandas

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-22-lazypandas-modernization.md
docs/superpowers/specs/: 2026-05-22-lazypandas-modernization-design.md
lazypandas/: __init__.py  actions.py  examine.py  io.py  lazypandas.py
src/lazypandas/: __init__.py  actions.py  examine.py  io.py
tests/: conftest.py  test_actions.py  test_bugs.py  test_examine.py  test_export_df.py  test_import_df.py  test_sample.py
tests/file_output/: .gitignore
