[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazypandas"
version = "0.2.0"
description = "A collection of data wrangling helper methods for pandas."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Vinny Pasceri", email = "vinnypasceri@gmail.com" }]
requires-python = ">=3.10"
keywords = ["pandas", "dataframe", "csv", "helpers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.urls]
Homepage = "https://github.com/vinnyp/lazypandas"
Repository = "https://github.com/vinnyp/lazypandas"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=lazypandas --cov-report=term-missing"

[tool.coverage.report]
fail_under = 80
show_missing = true
